<resources>
    <string name="app_name">PaperWall</string>
    <string name="tap_to_open">Tap anywhere to open photos.</string>
    <string name="read_extarnal_permission_rationale">I need this permission to let you choose images from your photos.</string>
    <string name="read_extarnal_permission_denied">In order to use this application, you must provide necessary permissions.</string>
    <string name="chooser_select_picture">Select pictures</string>
    <string name="ok">OK</string>
    <string name="app_info">I will loop through the pictures you have chosen and change the wallpaper on daily basis.</string>
    <string name="change_wallpaper_warning">Changes may take a while to be completed varying on your device specs.</string>
    <string name="change_wallpaper_finished">Changes have been saved.</string>
    <string name="change_wallpaper_scheduled">Scheduled.</string>
    <string name="success_image_content_description">Man showing his thumb for successed result</string>
    <string name="success_icon_content_description">Orange scheduled icon showing your selections has successfully scheduled.</string>
    <string name="no_image_selected">You have not select any image.</string>
    <string name="icon_library">Photo library icon</string>
</resources>
