<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.canberkozcelik.paperwall.ui.PaperWallViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_open_photos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone" >

            <TextView
                android:id="@+id/text_app_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="48dp"
                android:gravity="center_horizontal"
                android:text="@string/app_info"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/icon_photo_library"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/icon_library"
                android:src="@drawable/ic_baseline_photo_library_24px" />

            <TextView
                android:id="@+id/text_tap_anywhere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal"
                android:text="@string/tap_to_open" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_selected_papers"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="16dp"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:spanCount="2"
            tools:itemCount="3"
            tools:listitem="@layout/list_item_paper"
            android:visibility="gone" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>